--- a/Surf/index.html
+++ b/Surf/index.html
@@ -63,6 +63,109 @@
                     </div>
                 </div>
             </section>
+            <section class="section">
+                <div class="container">
+                    <div class="headline">
+                        <h2 class="section__title headline__title">почему Surfboard?</h2>
+                        <div class="headline__subtitle">Мы создаем уникальные и качественные доски из прочных и экологичных материалов.</div>
+                    </div>
+                    <ul class="benefits">
+                        <li class="benefits__item benefit">
+                            <div class="benefit__image">
+                                <div class="benefit__image-wrapper">
+                                    <img src="./Surf/Surfboard/img/icons/person.png" alt="person icon" class="benefit__icon">
+                                </div>
+                            </div>
+                            <div class="benefit__text">
+                                <h3 class="benefit__title">Perfect Fit</h3>
+                                <div class="benefit__desc">
+                                    <p>
+                                        Мы создаем доски по индивидуальным замерам. 
+                                        Мы учитываем при создании ваш рост, вес и уровень подготовки.
+                                    </p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="benefits__item benefit">
+                            <div class="benefit__image">
+                                <div class="benefit__image-wrapper">
+                                    <img src="./Surf/Surfboard/img/icons/eco-planet.png" alt="eco planet icon" class="benefit__icon">
+                                </div>
+                            </div>
+                            <div class="benefit__text">
+                                <h3 class="benefit__title">Strong</h3>
+                                <div class="benefit__desc">
+                                    <p>
+                                        Мы используем только качественные и экологичные материалы. 
+                                        Ваша доска прослужит вам долгие годы.
+                                    </p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="benefits__item benefit">
+                            <div class="benefit__image">
+                                <div class="benefit__image-wrapper">
+                                    <img src="./Surf/Surfboard/img/icons/Unique-surf.png" alt="Unique-surf icon" class="benefit__icon">
+                                </div>
+                            </div>
+                            <div class="benefit__text">
+                                <h3 class="benefit__title">Unique</h3>
+                                <div class="benefit__desc">
+                                    <p>
+                                        Вы станете обладателем уникального серфборда. 
+                                        Доска будет выполнена по вашему уникальному дизайну. 
+                                    </p>
+                                </div>
+                            </div>
+                        </li>
+                        
+                    </ul>
+                </div>
+            </section>
+            <section class="section">
+                <div class="container">
+                    <h2 class="section__title">Отзывы</h2>
+                    <div class="reviews">
+                        <div class="reviews__display">
+                            <div class="reviews__display-inner">
+                                <div class="reviews__avatar">
+                                    <img src="./Surf/Surfboard/img/content/Rectangle 7.png" alt="" class="reviews__avatar-img">
+                                </div>
+                                <article class="reviews__content">
+                                    <h3 class="reviews__title">Лучший дизайн</h3>
+                                    <div class="reviews__text">
+                                        <p>
+                                            Я увидела доски на сайте и влюбилась в их дизайн. 
+                                            К летнему сезону я заказала себе доску в SurfBoard. 
+                                            Дизайнер команды - волшебница! Она учла все мои предпочтения и комментарии. 
+                                            В итоге получился прекрасный дизайн. А я катаюсь на доске, которая мне нравится)
+
+                                        </p>
+                                    </div>
+                                    <div class="reviews__author">Ольга Макарова</div>
+                                </article>
+                            </div>
+                        </div>
+                        <ul class="reviews__switcher">
+                            <li class="reviews__switcher-item interactive-avatar">
+                                <a href="" class="interactive-avatar-link">
+                                    <img src="./Surf/Surfboard/img/content/Rectangle 7.png" alt="girl" class="interactive-avatar__img">
+                                </a>
+                            </li>
+                            <li class="reviews__switcher-item interactive-avatar">
+                                <a href="" class="interactive-avatar-link">
+                                    <img src="./Surf/Surfboard/img/content/Rectangle 7.png" alt="girl" class="interactive-avatar__img">
+                                </a>
+                            </li>
+                            <li class="reviews__switcher-item interactive-avatar">
+                                <a href="" class="interactive-avatar-link">
+                                    <img src="./Surf/Surfboard/img/content/Rectangle 7.png" alt="girl" class="interactive-avatar__img">
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
         </div>
     </div>
 </body>
