Form page markup

--- a/Surf/index.html
+++ b/Surf/index.html
@@ -63,7 +63,7 @@
                     </div>
                 </div>
             </section>
-            <section class="section">
+            <section class="section headline-section">
                 <div class="container">
                     <div class="headline">
                         <h2 class="section__title headline__title">почему Surfboard?</h2>
@@ -122,7 +122,7 @@
                     </ul>
                 </div>
             </section>
-            <section class="section">
+            <section class="section reviews-section">
                 <div class="container">
                     <h2 class="section__title">Отзывы</h2>
                     <div class="reviews">
@@ -147,7 +147,7 @@
                             </div>
                         </div>
                         <ul class="reviews__switcher">
-                            <li class="reviews__switcher-item interactive-avatar">
+                            <li class="reviews__switcher-item interactive-avatar interactive-avatar--active">
                                 <a href="" class="interactive-avatar-link">
                                     <img src="./Surf/Surfboard/img/content/Rectangle 7.png" alt="girl" class="interactive-avatar__img">
                                 </a>
@@ -164,6 +164,54 @@
                             </li>
                         </ul>
                     </div>
+                </div>
+            </section>
+            <section class="section order-section">
+                <div class="container">
+                    <h2 class="section__title">Закажите доску</h2>
+                    <form class="form">
+                        <form class="form__col">
+                            <div class="form__row">
+                                <label class="form__block">
+                                    <div class="form__title">Имя</div>
+                                    <input type="text" class="form__input">
+                                </label>
+                                <label class="form__block">
+                                    <div class="form__title">Имя</div>
+                                    <input type="text" class="form__input">
+                                </label>
+                                <label class="form__block">
+                                    <div class="form__title">Имя</div>
+                                    <input type="text" class="form__input">
+                                </label>
+                                <label class="form__block">
+                                    <div class="form__title">Имя</div>
+                                    <input type="text" class="form__input">
+                                </label>
+                                <label class="form__block">
+                                    <div class="form__title">Имя</div>
+                                    <input type="text" class="form__input">
+                                </label>
+                                <label class="form__block">
+                                    <div class="form__title">Имя</div>
+                                    <input type="text" class="form__input">
+                                </label>
+                                <label class="form__block">
+                                    <div class="form__title">Имя</div>
+                                    <input type="text" class="form__input">
+                                </label>
+                            </div>
+                        </form>
+                        <form class="form__col">
+                            <div class="form_row">
+                                <label class="form__block">
+                                    <div class="form__title">Комментарий</div>
+                                    <textarea class="form__input form__input--textarea"></textarea>
+                                    <input type="text" class="form__input">
+                                </label>
+                            </div>
+                        </form>
+                    </form>
                 </div>
             </section>
         </div>
