--- a/Surf/index.html
+++ b/Surf/index.html
@@ -170,7 +170,7 @@
                 <div class="container">
                     <h2 class="section__title">Закажите доску</h2>
                     <form class="form">
-                        <form class="form__col">
+                        <div class="form__col">
                             <div class="form__row">
                                 <label class="form__block">
                                     <div class="form__title">Имя</div>
@@ -201,8 +201,8 @@
                                     <input type="text" class="form__input">
                                 </label>
                             </div>
-                        </form>
-                        <form class="form__col">
+                        </div>
+                        <div class="form__col">
                             <div class="form_row">
                                 <label class="form__block">
                                     <div class="form__title">Комментарий</div>
@@ -210,7 +210,7 @@
                                     <input type="text" class="form__input">
                                 </label>
                             </div>
-                        </form>
+                        </div>
                     </form>
                 </div>
             </section>
