--- a/Surf/index.html
+++ b/Surf/index.html
@@ -177,27 +177,31 @@
                                     <input type="text" class="form__input">
                                 </label>
                                 <label class="form__block">
-                                    <div class="form__title">Имя</div>
+                                    <div class="form__title">Телефон</div>
+                                    <input type="text" class="form__input">
+                                </label>
+                            </div>
+                            <div class="form__row">
+                                <label class="form__block">
+                                    <div class="form__title">Улица</div>
+                                    <input type="text" class="form__input">
+                                </label>
+                            </div>
+                            <div class="form__row">
+                                <label class="form__block">
+                                    <div class="form__title">Дом</div>
                                     <input type="text" class="form__input">
                                 </label>
                                 <label class="form__block">
-                                    <div class="form__title">Имя</div>
+                                    <div class="form__title">Корпус</div>
                                     <input type="text" class="form__input">
                                 </label>
                                 <label class="form__block">
-                                    <div class="form__title">Имя</div>
+                                    <div class="form__title">Квартира</div>
                                     <input type="text" class="form__input">
                                 </label>
                                 <label class="form__block">
-                                    <div class="form__title">Имя</div>
-                                    <input type="text" class="form__input">
-                                </label>
-                                <label class="form__block">
-                                    <div class="form__title">Имя</div>
-                                    <input type="text" class="form__input">
-                                </label>
-                                <label class="form__block">
-                                    <div class="form__title">Имя</div>
+                                    <div class="form__title">Этаж</div>
                                     <input type="text" class="form__input">
                                 </label>
                             </div>
@@ -207,8 +211,30 @@
                                 <label class="form__block">
                                     <div class="form__title">Комментарий</div>
                                     <textarea class="form__input form__input--textarea"></textarea>
-                                    <input type="text" class="form__input">
                                 </label>
+                            </div>
+                            <div class="form__controls">
+                                <label class="radio">
+                                    <input type="radio"name="option" class="radio__elem">
+                                    <div class="radio__visible"></div>
+                                    <div class="radio__title">Оплата наличными</div>
+                                </label>
+                                <label class="radio">
+                                    <input type="radio" name="option"class="radio__elem">
+                                    <div class="radio__visible"></div>
+                                    <div class="radio__title">Оплата картой</div>
+                                </label>
+                            </div>
+                            <div class="form__controls">
+                                <label class="radio radio--checkbox">
+                                    <input type="checkbox" class="radio__elem">
+                                    <div class="radio__visible"></div>
+                                    <div class="radio__title">Не перезванивать</div>
+                                </label>
+                            </div>
+                            <div class="form__btns">
+                                <input type="submit" value="Заказать" class="btn">
+                                <input type="reset" value="Очистить" class="btn btn--theme--transparent">
                             </div>
                         </div>
                     </form>
@@ -216,5 +242,18 @@
             </section>
         </div>
     </div>
+    <nav class="fixed-menu">
+        <ul class="fixed-menu__list">
+            <li class="fixed-menu__item"> <a href="" class="fixed-menu__link"></a> </li>
+            <li class="fixed-menu__item"> <a href="" class="fixed-menu__link"></a> </li>
+            <li class="fixed-menu__item"> <a href="" class="fixed-menu__link"></a> </li>
+            <li class="fixed-menu__item"> <a href="" class="fixed-menu__link"></a> </li>
+            <li class="fixed-menu__item fixed-menu__item--active"> <a href="" class="fixed-menu__link"></a> </li>
+            <li class="fixed-menu__item"> <a href="" class="fixed-menu__link"></a> </li>
+            <li class="fixed-menu__item"> <a href="" class="fixed-menu__link"></a> </li>
+            <li class="fixed-menu__item"> <a href="" class="fixed-menu__link"></a> </li>
+            <li class="fixed-menu__item"> <a href="" class="fixed-menu__link"></a> </li>
+        </ul>
+    </nav>
 </body>
 </html>
